--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -5,8 +5,13 @@ $BluePurple: #626ee3;
 $RadiumGreen:rgb(127, 219, 202);
 $Purple: #6A00A8;
 $green:linear-gradient(#04ff00, #369536);
-
+$secondaryWhite: #ffffff;
+$inputBlue: #E8F0FE;
+$greyColor: rgb(197, 186, 186);
+$errorColor: rgb(248, 103, 103);
+$iupuiBg: #7A1705;
 // fonts
 $roboto: "Roboto";
 
 $smallShadow: 0 2px 5px -1px rgb(0, 0, 0);
+$formShadow: 0 6px 16px 0 rgba(0,0,0, .2);
