--- a/frontend/src/components/sharedUi/styles/sharedUi.scss
+++ b/frontend/src/components/sharedUi/styles/sharedUi.scss
@@ -2,7 +2,7 @@
 
 .Container {
   width: 100vw;
-  background: $BlueBg;
+  background: $iupuiBg;
   display: flex;
   height: 88vh;
   .CardContainer {
@@ -37,7 +37,7 @@
     align-items: center;
     justify-content: center;
     .CardContent{
-      background: $LightBlueBg;
+      background: $inputBlue;
       height: 95%;
       width: 90%;
       border-radius: 10px;
@@ -46,12 +46,12 @@
       justify-content: center;
 
       .InActiveCard{
-          color: $RadiumGreen;
+          color: $LightBlueBg;
           font-family: $roboto;
           font-size: 16px;
-          letter-spacing: 0.1rem;
+          letter-spacing: 0.13rem;
           width: 90%;
-          font-weight: 500;
+          font-weight: 700;
           text-align: center;
       }
       .dataHolder{
@@ -60,10 +60,10 @@
         //justify-content: flex-start;
         p{
           font-size: 16px;
-          font-weight: 600;
+          font-weight: 650;
           margin-bottom: 3px;
-          letter-spacing: 0.14rem;
-          color: $RadiumGreen;
+          letter-spacing: 0.16rem;
+          color: $LightBlueBg;
           // max-width: 90%;
           margin-left: 8px;
           font-family: $roboto;
